--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main>
     <div class="container">
       <div class="search">
-        <h1 class="title">El clima en 🌎</h1>
+        <h1 class="title">El clima en el 🌎</h1>
         <form id="form">
           <button type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
